--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@ margin-right: 4px;
     <div class="nav-right">
       <a href="Club.html" class="nav-link">Clubs</a>
       <a href="#contact" class="nav-link">Contact</a>
+      <a href="guide_utilisation.html" class="nav-link">Guide d'utilisation</a>
     </div>
   </nav>  
   <header>
