--- a/index.html
+++ b/index.html
@@ -242,14 +242,15 @@
   left: 0;
   background-color: rgba(0, 0, 0, 0.7);
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-gap: 20px;
-padding: 12px 32px 12px 24px;
   align-items: center;
-  padding: 12px 24px;
+  padding: 12px 16px;
   z-index: 999;
   backdrop-filter: blur(10px);
+  box-sizing: border-box;
 }
+
 
 .nav-logo {
   font-size: 20px;
