--- a/guide_entraineur.html
+++ b/guide_entraineur.html
@@ -68,10 +68,30 @@
       display: block;
       margin: 0 auto;
     }
+    .slide.static {
+  width: 320px;
+  max-width: 100%;
+  margin: 0 auto;
+  scroll-snap-align: unset;
+}
+.section-wrapper.single-column {
+  justify-content: center;
+}
+
   </style>
 </head>
 <body>
-
+  <header style="background-color: #000; position: fixed; top: 0; left: 0; width: 100%; z-index: 1000; border-bottom: 1px solid #222;">
+    <div style="max-width: 1280px; margin: 0 auto; display: flex; align-items: center; justify-content: space-between; padding: 12px 24px;">
+      <div style="font-weight: 700; font-size: 20px;">
+        <span style="color: #01B3F4;">FOUND</span>CLUB
+      </div>
+      <nav>
+        <a href="index.html" style="color: #01B3F4; text-decoration: none; font-weight: 600; font-size: 16px;">Accueil</a>
+      </nav>
+    </div>
+  </header>
+    
   <h1>Guide Entraîneur – Étape 1 : Inscription</h1>
 
   <div class="carousel-wrapper">
@@ -130,8 +150,8 @@
       <img src="images/guide/entraineur/sans_club.png" alt="Sans club">
     </div>
   </div>
-<h1>Guide Entraîneur – Étape 3 : Gérer les présences et échanges</h1>
-<div class="carousel-wrapper">
+  <h1>Guide Entraîneur – Étape 3 : Gérer les présences et échanges</h1>
+<div class="section-wrapper">
   <div class="slide">
     <h2>📅 Prochains événements</h2>
     <p>Consulte les événements à venir et suis les présences ou absences de tes joueurs en temps réel.</p>
@@ -148,6 +168,7 @@
     <img src="images/guide/entraineur/profil_effectif.png" alt="Profil joueur équipe">
   </div>
 </div>
+
 <h1>Guide Entraîneur – Étape 4 : Mes événements</h1>
 <div class="carousel-wrapper">
   <div class="slide">
@@ -172,25 +193,28 @@
   </div>
 </div>
 <h1>Guide Entraîneur – Étape 5 : Rechercher un match amical</h1>
-<div class="carousel-wrapper">
+<div class="section-wrapper">
   <div class="slide">
     <h2>🔎 Trouver un match amical</h2>
     <p>Depuis l’onglet “Rechercher”, accède à tous les événements ouverts et filtre ceux qui t’intéressent : recherche de match amical, détection, stage, etc.</p>
     <img src="images/guide/entraineur/matchs_amicaux.png" alt="Recherche matchs amicaux">
   </div>
 </div>
+
+
 <h1>Guide Entraîneur – Étape 6 : Messagerie</h1>
-  <div class="carousel-wrapper">
-    <div class="slide">
-      <h2>📬 Accès aux discussions</h2>
-      <p>Depuis l’onglet “Messagerie”, retrouve tous tes échanges avec les joueurs ou les autres clubs.</p>
-      <img src="images/guide/entraineur/Messagerie Joueur.png" alt="Messagerie">
-    </div>
-    <div class="slide">
-      <h2>💬 Vue conversation</h2>
-      <p>Échange avec tes interlocuteurs dans une interface de chat fluide et intuitive.</p>
-      <img src="images/guide/entraineur/Conversation.png" alt="Conversation privée">
-    </div>
+<div class="section-wrapper">
+  <div class="slide">
+    <h2>📬 Accès aux discussions</h2>
+    <p>Depuis l’onglet “Messagerie”, retrouve tous tes échanges avec les joueurs ou les autres clubs.</p>
+    <img src="images/guide/entraineur/Messagerie Joueur.png" alt="Messagerie">
   </div>
+  <div class="slide">
+    <h2>💬 Vue conversation</h2>
+    <p>Échange avec tes interlocuteurs dans une interface de chat fluide et intuitive.</p>
+    <img src="images/guide/entraineur/Conversation.png" alt="Conversation privée">
+  </div>
+</div>
+
 </body>
 </html>
