--- a/guide_entraineur.html
+++ b/guide_entraineur.html
@@ -151,9 +151,9 @@
     </div>
   </div>
   <h1>Guide Entraîneur – Étape 3 : Gérer les présences et échanges</h1>
-<div class="section-wrapper">
+<div class="carousel-wrapper">
   <div class="slide">
-    <h2>📅 Prochains événements</h2>
+    <h2>📅 Gérer les présences</h2>
     <p>Consulte les événements à venir et suis les présences ou absences de tes joueurs en temps réel.</p>
     <img src="images/guide/entraineur/mon_equipe.png" alt="Événements & présences">
   </div>
@@ -168,6 +168,8 @@
     <img src="images/guide/entraineur/profil_effectif.png" alt="Profil joueur équipe">
   </div>
 </div>
+
+
 
 <h1>Guide Entraîneur – Étape 4 : Mes événements</h1>
 <div class="carousel-wrapper">
@@ -193,17 +195,16 @@
   </div>
 </div>
 <h1>Guide Entraîneur – Étape 5 : Rechercher un match amical</h1>
-<div class="section-wrapper">
-  <div class="slide">
-    <h2>🔎 Trouver un match amical</h2>
-    <p>Depuis l’onglet “Rechercher”, accède à tous les événements ouverts et filtre ceux qui t’intéressent : recherche de match amical, détection, stage, etc.</p>
-    <img src="images/guide/entraineur/matchs_amicaux.png" alt="Recherche matchs amicaux">
-  </div>
+<div class="slide" style="max-width: 400px; margin: 0 auto; text-align: center;">
+  <h2>🔎 Trouver un match amical</h2>
+  <p>Depuis l’onglet “Rechercher”, accède à tous les événements ouverts et filtre ceux qui t’intéressent : match amical, détection, stage, etc.</p>
+  <img src="images/guide/entraineur/matchs_amicaux.png" alt="Recherche matchs amicaux">
 </div>
 
 
+
 <h1>Guide Entraîneur – Étape 6 : Messagerie</h1>
-<div class="section-wrapper">
+<div class="carousel-wrapper">
   <div class="slide">
     <h2>📬 Accès aux discussions</h2>
     <p>Depuis l’onglet “Messagerie”, retrouve tous tes échanges avec les joueurs ou les autres clubs.</p>
