--- a/index.html
+++ b/index.html
@@ -322,62 +322,39 @@ margin-right: 4px;
 
   <div class="carousel" id="carousel">
     <div class="carousel-item">
-      <img src="images/detections.png" alt="Détections">
-      <p>Ici tu peux trouver directement de nouvelles équipes en participant aux détections proposées autour de toi.</p>
+      <img src="images/rechercher_club.png" alt="Recherche club">
+      <p>Recherchez un club autour de chez vous selon vos critères.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/stages.png" alt="Stages">
-      <p>Participe à des stages sportifs pour progresser et rencontrer d'autres passionnés.</p>
+      <img src="images/rechercher_evenements.png" alt="Recherche événements">
+      <p>Trouvez des événements sportifs : détections, entraînements ou matchs.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/tournois.png" alt="Tournois">
-      <p>Découvre ou propose des tournois pour te challenger et prendre du plaisir.</p>
+      <img src="images/planning.png" alt="Planning">
+      <p>Gérez votre planning avec une vue claire des événements à venir.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/entrainements-ouverts.png" alt="Entraînements ouverts">
-      <p>Teste un club en participant à des entraînements ouverts sans engagement.</p>
+      <img src="images/gerer_mon_club.png" alt="Gestion club">
+      <p>Administrez votre club en toute simplicité grâce aux outils intégrés.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/filtres-recherches-evenements.png" alt="Filtres">
-      <p>Utilise nos filtres avancés pour trouver les événements qui correspondent à ton niveau et tes envies.</p>
+      <img src="images/mes_equipes.png" alt="Équipes">
+      <p>Ajoutez, consultez et organisez vos équipes selon les catégories.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/trouve-ton-club.png" alt="Trouver club">
-      <p>Trouve le club qui te correspond près de chez toi en quelques clics.</p>
+      <img src="images/messagerie.png" alt="Messagerie">
+      <p>Discutez avec vos joueurs, coachs ou coéquipiers via la messagerie.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/trouve-ton-equipe.png" alt="Trouver équipe">
-      <p>Tu veux intégrer une nouvelle équipe ? On t’aide à faire le lien simplement.</p>
+      <img src="images/mon_profil.png" alt="Profil">
+      <p>Complétez votre profil avec vos infos, poste, taille et expériences.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/details-evenement.png" alt="Détails événements">
-      <p>Consulte les informations détaillées de chaque événement avant de t’y inscrire.</p>
-    </div>
-    <div class="carousel-item">
-      <img src="images/mes-evenements.png" alt="Mes événements">
-      <p>Retrouve tous les événements auxquels tu es inscrit depuis ton tableau de bord.</p>
-    </div>
-    <div class="carousel-item">
-      <img src="images/mon-effectif.png" alt="Effectif">
-      <p>Gère et suis ton effectif ou ton groupe en un coup d’œil si tu es encadrant.</p>
-    </div>
-    <div class="carousel-item">
-      <img src="images/profil-partenaires.png" alt="Partenaires">
-      <p>Découvre les partenaires des clubs et leurs offres réservées à la communauté.</p>
-    </div>
-    <div class="carousel-item">
-      <img src="images/iphone-profil.png" alt="Profil">
-      <p>Crée ton profil joueur ou coach et valorise ton parcours sportif.</p>
-    </div>
-    <div class="carousel-item">
-      <img src="images/mes-messages.png" alt="Messages">
-      <p>Échange avec les clubs et les joueurs grâce à la messagerie intégrée.</p>
-    </div>
-    <div class="carousel-item">
-      <img src="images/mes-notifications.png" alt="Notifications">
-      <p>Sois informé en temps réel de toutes les nouveautés qui te concernent.</p>
+      <img src="images/modifier_information_profil2.png" alt="Modifier profil">
+      <p>Mettez à jour votre profil à tout moment pour rester à jour.</p>
     </div>
   </div>
+  
   
 
   <div class="cta">
