--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ margin-right: 4px;
 
   <div class="carousel" id="carousel">
     <div class="carousel-item">
-      <img src="images/rechercher_club.png" alt="Recherche club">
+      <img src="images/rechercher_club.PNG" alt="Recherche club">
       <p>Recherchez un club autour de chez vous selon vos critères.</p>
     </div>
     <div class="carousel-item">
