--- a/index.html
+++ b/index.html
@@ -326,31 +326,31 @@ margin-right: 4px;
       <p>Recherchez un club autour de chez vous selon vos critères.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/rechercher_evenements.png" alt="Recherche événements">
+      <img src="images/rechercher_evenements.PNG" alt="Recherche événements">
       <p>Trouvez des événements sportifs : détections, entraînements ou matchs.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/planning.png" alt="Planning">
+      <img src="images/planning.PNG" alt="Planning">
       <p>Gérez votre planning avec une vue claire des événements à venir.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/gerer_mon_club.png" alt="Gestion club">
+      <img src="images/gerer_mon_club.PNG" alt="Gestion club">
       <p>Administrez votre club en toute simplicité grâce aux outils intégrés.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/mes_equipes.png" alt="Équipes">
+      <img src="images/mes_equipes.PNG" alt="Équipes">
       <p>Ajoutez, consultez et organisez vos équipes selon les catégories.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/messagerie.png" alt="Messagerie">
+      <img src="images/messagerie.PNG" alt="Messagerie">
       <p>Discutez avec vos joueurs, coachs ou coéquipiers via la messagerie.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/mon_profil.png" alt="Profil">
+      <img src="images/mon_profil.PNG" alt="Profil">
       <p>Complétez votre profil avec vos infos, poste, taille et expériences.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/modifier_information_profil2.png" alt="Modifier profil">
+      <img src="images/modifier_information_profil2.PNG" alt="Modifier profil">
       <p>Mettez à jour votre profil à tout moment pour rester à jour.</p>
     </div>
   </div>
