--- a/index.html
+++ b/index.html
@@ -322,39 +322,63 @@ margin-right: 4px;
 
   <div class="carousel" id="carousel">
     <div class="carousel-item">
-      <img src="images/rechercher_club.PNG" alt="Recherche club">
+      <img src="images/rechercher_club.png" alt="Recherche club">
       <p>Recherchez un club autour de chez vous selon vos critères.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/rechercher_evenements.PNG" alt="Recherche événements">
+      <img src="images/rechercher_evenements.png" alt="Recherche événements">
       <p>Trouvez des événements sportifs : détections, entraînements ou matchs.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/planning.PNG" alt="Planning">
+      <img src="images/planning.png" alt="Planning">
       <p>Gérez votre planning avec une vue claire des événements à venir.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/gerer_mon_club.PNG" alt="Gestion club">
+      <img src="images/gerer_mon_club.png" alt="Gestion club">
       <p>Administrez votre club en toute simplicité grâce aux outils intégrés.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/mes_equipes.PNG" alt="Équipes">
+      <img src="images/mes_equipes.png" alt="Équipes">
       <p>Ajoutez, consultez et organisez vos équipes selon les catégories.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/messagerie.PNG" alt="Messagerie">
+      <img src="images/messagerie.png" alt="Messagerie">
       <p>Discutez avec vos joueurs, coachs ou coéquipiers via la messagerie.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/mon_profil.PNG" alt="Profil">
+      <img src="images/mon_profil.png" alt="Profil">
       <p>Complétez votre profil avec vos infos, poste, taille et expériences.</p>
     </div>
     <div class="carousel-item">
-      <img src="images/modifier_information_profil2.PNG" alt="Modifier profil">
+      <img src="images/modifier_information_profil2.png" alt="Modifier profil">
       <p>Mettez à jour votre profil à tout moment pour rester à jour.</p>
     </div>
   </div>
-  
+<section id="inscrire-club" style="background-color: #0a0a0a; padding: 60px 20px; text-align: center;">
+  <h2 style="color: #01B3F4; font-size: 28px; margin-bottom: 20px;">📣 Dirigeants & entraîneurs : inscrivez votre équipe</h2>
+  <p style="color: #ccc; font-size: 18px; max-width: 700px; margin: 0 auto 30px;">
+    Pour faire apparaître votre club ou vos équipes sur FoundClub, rien de plus simple :
+    remplissez le formulaire ci-dessous, ou contactez-nous directement au <a href="tel:+33778813915" style="color: #01B3F4;">07 78 81 39 15</a>.
+  </p>
+
+  <form action="https://formspree.io/f/xpwrlwbw" method="POST" style="max-width: 500px; margin: 0 auto;">
+    <input type="text" name="nom" placeholder="Nom du club ou de l’équipe" required
+      style="width: 100%; padding: 12px; margin-bottom: 12px; border-radius: 8px; border: none; font-family: 'Montserrat';" />
+    <input type="email" name="email" placeholder="Adresse e-mail" required
+      style="width: 100%; padding: 12px; margin-bottom: 12px; border-radius: 8px; border: none; font-family: 'Montserrat';" />
+    <input type="tel" name="telephone" placeholder="Numéro de téléphone" required
+      style="width: 100%; padding: 12px; margin-bottom: 12px; border-radius: 8px; border: none; font-family: 'Montserrat';" />
+    <textarea name="message" placeholder="Dites-nous en plus (optionnel)" rows="4"
+      style="width: 100%; padding: 12px; margin-bottom: 20px; border-radius: 8px; border: none; font-family: 'Montserrat';"></textarea>
+    <button type="submit"
+      style="background-color: #01B3F4; color: #fff; padding: 14px 28px; border: none; border-radius: 30px; font-size: 16px; font-weight: bold; cursor: pointer;">
+      Envoyer ma demande
+    </button>
+  </form>
+
+  <p style="margin-top: 30px; font-size: 16px; color: #aaa;">📞 Vous préférez échanger directement ? Appelez-nous au <a href="tel:+33778813915" style="color: #01B3F4;">07 78 81 39 15</a></p>
+</section>
+
   
 
   <div class="cta">
@@ -439,6 +463,7 @@ margin-right: 4px;
   </style>
   
   <footer class="footer">
+  
     <div class="social-icons">
       <a href="https://www.facebook.com/FoundClub" target="_blank">
         <img src="images/icon/facebook.png" alt="Facebook">
