--- a/index.html
+++ b/index.html
@@ -300,14 +300,14 @@ margin-right: 4px;
       <span class="nav-logo">FOUND<span class="blue">CLUB</span></span>
     </div>
     <div class="nav-right">
-      <a href="Club.html" class="nav-link">Clubs</a>
-      <a href="#contact" class="nav-link">Contact</a>
+      <a href="qui_sommes_nous.html" class="nav-link">Qui sommes-nous</a>
+      <a href="Club.html" class="nav-link">Fonctionnalités</a>
+    <a href="#inscrire-club" class="nav-link">Inscrire mon club</a>
       <a href="guide_utilisation.html" class="nav-link">Guide d'utilisation</a>
     </div>
   </nav>  
   <header>
     <h1 class="logo-big"><span class="blue">FOUND</span>CLUB</h1>
-    <p>Disponible le 15 mai 2025</p>
   </header>
 
   <section class="hero">
