--- a/index.html
+++ b/index.html
@@ -425,7 +425,14 @@ margin-right: 4px;
 
   <div class="cta">
     <p><strong>Simplifiez votre pratique sportive. Rejoignez la communauté FoundClub !</strong></p>
-    <img src="images/store-badges.png" alt="Boutons App Store et Google Play" class="store-badge" />
+  <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; margin-top: 20px;">
+  <a href="https://apps.apple.com/fr/app/found-club/id6744020465" target="_blank">
+    <img src="images/badge-app-store.svg" alt="Disponible sur l'App Store" style="height: 60px;" />
+  </a>
+  <a href="https://play.google.com/store/apps/details?id=com.foundclub&pcampaignid=web_share" target="_blank">
+    <img src="images/badge-google-play.png" alt="Disponible sur Google Play" style="height: 60px;" />
+  </a>
+</div>
     <br />
     <button onclick="window.location.href='https://foundclub.app'">Voir une démo de l'app</button>
   </div>
