--- a/index.html
+++ b/index.html
@@ -20,9 +20,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FoundClub – Trouve ton club</title>
-  <link rel="icon" href="images/favicon/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png" />
-  <link rel="manifest" href="images/favicon/site.webmanifest" />  
+ <!-- Favicon multi-formats -->
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png?v=2">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png?v=2">
+<link rel="icon" href="/images/favicon/favicon.ico?v=2" type="image/x-icon">
+<link rel="shortcut icon" href="/favicon.ico?v=2">
+
+<!-- Apple touch icon -->
+<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png?v=2">
+
+<!-- Manifest (si tu l’utilises) -->
+<link rel="manifest" href="/images/favicon/site.webmanifest?v=2">
+<meta name="theme-color" content="#000000">
+
   <meta name="description" content="Rejoins FoundClub, l'application qui te permet de trouver ton club sportif, participer à des détections, matchs, tournois, et gérer ta saison. Gratuitement.">
 <meta name="keywords" content="club de sport, foot, basket, détection, tournoi, entraînement, joueurs, application, sportif, Marseille, FoundClub">
 <meta name="author" content="FoundClub">
