--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FoundClub – Trouve ton club</title>
- <!-- Favicon multi-formats (aligné sur les fichiers présents) -->
-<link rel="icon" href="/favicon.ico?v=3" sizes="any">
-<link rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon-96x96.png?v=3">
-<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png?v=3">
-<link rel="manifest" href="/site.webmanifest?v=3">
+<link rel="icon" href="/favicon.ico?v=9" sizes="any">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png?v=9">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png?v=9">
+<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png?v=9">
+<link rel="manifest" href="/images/favicon/site.webmanifest?v=9">
 <meta name="theme-color" content="#000000">
 
   <meta name="description" content="Rejoins FoundClub, l'application qui te permet de trouver ton club sportif, participer à des détections, matchs, tournois, et gérer ta saison. Gratuitement.">
