--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FoundClub – Trouve ton club</title>
 <link rel="icon" href="/favicon.ico?v=9" sizes="any">
+<link rel="icon" type="image/png" sizes="48x48" href="/images/favicon/favicon-48x48.png?v=10">
 <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png?v=9">
 <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png?v=9">
 <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png?v=9">
