--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@ margin-right: 4px;
   <div class="nav-right" id="navLinks">
     <a href="qui_sommes_nous.html" class="nav-link">Qui sommes-nous</a>
     <a href="Club.html" class="nav-link">Fonctionnalités</a>
+    <a href="parrainage.html" class="nav-link">Parrainage</a>
     <a href="#inscrire-club" class="nav-link">Inscrire mon club</a>
     <a href="guide_utilisation.html" class="nav-link">Guide d'utilisation</a>
   </div>
